# imageHosting

./: README.md  nginx.conf  preparation.txt  tc_http_server.conf  tuchuang.sql  tuchuang_noindex.sql
front/: asset-manifest.json  index.html
front/static/css/: main.afc58655.chunk.css
front/static/js/: 2.ac20468f.chunk.js  runtime-main.ac423fd0.js
shorturl/shorturl_proxy/: go.mod  go.sum  main.go
shorturl/shorturl_proxy/pkg/config/: config.go
shorturl/shorturl_proxy/pkg/grpc_client_pool/: grpc_client_pool.go
shorturl/shorturl_proxy/pkg/xerrors/: errors.go
shorturl/shorturl_proxy/proxy/: proxy.go
shorturl/shorturl_proxy/services/: default_pool.go
shorturl/shorturl_proxy/services/short-url/: client.go
shorturl/shorturl_server/: dev.config.yaml  go.mod  go.sum
shorturl/shorturl_server/pkg/config/: config.go
shorturl/shorturl_server/pkg/interceptor/: auth.go  error.go
shorturl/shorturl_server/pkg/log/: hook.go  log.go  rotate_writer.go
shorturl/shorturl_server/pkg/utils/: base62.go  random_str.go  regexp.go
shorturl/shorturl_server/proto/: shorturl.pb.go  shorturl_grpc.pb.go
shorturl/shorturl_server/shorturl_server/: main.go
shorturl/shorturl_server/shorturl_server/cache/: cache.go  factory.go  redis.go
shorturl/shorturl_server/shorturl_server/data/: url_map.go  url_map_factory.go
src/: CMakeLists.txt  HttpConn.cc  HttpConn.h  main.cc  tc_http_server.conf  tc_http_server_noindex.conf
src/api/: ApiCommon.cc  ApiCommon.h  ApiDealfile.cc  ApiDealfile.h  ApiDealsharefile.cc  ApiDealsharefile.h  ApiLogin.cc  ApiLogin.h  ApiMd5.cc  ApiMd5.h  ApiMyfiles.cc  ApiMyfiles.h  ApiRegister.cc  ApiRegister.h  ApiSharefiles.cc  ApiSharefiles.h  ApiSharepicture.cc  ApiSharepicture.h  ApiUpload.cc  ApiUpload.h  shorturl.grpc.pb.cc  shorturl.grpc.pb.h  shorturl.pb.cc  shorturl.pb.h  shorturl.proto
src/base/: BaseSocket.cc  BaseSocket.h  Common.cc  Common.h  EventDispatch.cc  EventDispatch.h  ThreadPool.cc  ThreadPool.h  netlib.cc  netlib.h  ostype.h  util.cc  util.h
src/log/: AsyncLogging.cc  AsyncLogging.h  LogFile.cc  LogFile.h  LogStream.cc  LogStream.h  Logging.cc  TimeZone.cc  Types.h
src/mysql/: DBPool.cc  DBPool.h
src/redis/: CachePool.cc  CachePool.h
test/scripts/: login.lua  myfiles.lua  reg.lua
(+5 files in other folders)
